--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,27 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        signingConfigs {
+            release {
+                File strFile = new File("../key/test.jks")
+                storeFile file(strFile)
+                storePassword "123456"
+                keyPassword "123456"
+                keyAlias "test"
+            }
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
+
+
+
 }
 
 dependencies {
